plugins {
    id 'groovy'
    id 'java'
    id 'org.jetbrains.intellij' version '0.7.3'
}

group 'io.github.kings1990'
version '2022.11.8'
sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

repositories {
    maven { name "Alibaba"; url "https://maven.aliyun.com/repository/public" }
    mavenCentral()
}

dependencies {
    compile 'com.google.guava:guava:30.1.1-jre'
    compile 'com.alibaba:fastjson:1.2.78'
    compile 'cn.hutool:hutool-all:5.7.9'
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    plugins = ['java', "org.intellij.plugins.markdown"]
    version '2021.3'//2021.3、2021.1、2020.3.4
    updateSinceUntilBuild false
    downloadSources true
}
patchPluginXml {
    changeNotes """

    <h3>v2022.11.9</h3>
    <ul>
        <li>url支持解析常量组合（例：@RequestMapping(value=Constant.PREFIX + "/xxx" + Constant.TARGET + "/yyy")）</li>
        <li>新增Focus定位按钮，定位当前的请求url对应的方法行</li>
        <li>可选择是否显示完整的url（默认为请求path，完整url：http(s)://...）</li>
        <li>可自由用外部完整url请求</li>
        <li>Api页面新增直接请求的按钮，可以跳到指定方法并完成一次已保存的请求</li>
        <li>去除请求类型的背景颜色（颜色看着不太舒适，回归自然）</li>
    </ul>
    
    """
}
test {
    useJUnitPlatform()
}
runIde {
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
    jbrVersion 'jbrsdk-11_0_10-osx-x64-b1314.58'
}

runPluginVerifier {
    ideVersions = ["IIU-2020.3.1", "IIU-2021.2.1"]
//  https://github.com/JetBrains/intellij-plugin-verifier/releases
//  https://data.services.jetbrains.com/products?code=IIU
    verifierPath = '/Users/wilson/Downloads/verifier-cli-1.266-all.jar'
}
